test/error/type/err6.rzy
// Wrong number of initializer elements

component
  Err6
  implementation elementary
    var
      a : Array{8,R{0,10}} = [0,0];
  end

